# static-json-pointer

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: Cargo.toml  schema.json
tests/src/: lib.rs
