[package]
name = "static-json-pointer"
version = "0.1.0"
authors = ["Anthony Nowell <anowell@gmail.com>"]
license = "MIT"

description = "Query static JSON for values and tokens at compile time."
repository = "https://github.com/anowell/static-json-pointer"
keywords = ["json", "macros"]

[lib]
crate-type = ["proc-macro"]

[dependencies]
serde_json = "1.0.13"
proc-macro2 = "0.3.6"
lazy_static = "1.0"
